Divs #personAuthorDetails, #personWorks, and #personWorkTypes are no longer overlapping due to adjustments of margins and paddings

--- a/themes/linkedswissbib/less/linkedswissbib.less
+++ b/themes/linkedswissbib/less/linkedswissbib.less
@@ -53,13 +53,11 @@ ul, li {
 
 #personAuthorImage {
   float: left;
-  margin-top: 40px;
+  margin-top: 20px;
   margin-left: -180px;
 }
 
 #personAuthorDescription {
-  float: right;
-  width: 100%;
 }
 
 #personDetailsLabel {
@@ -91,7 +89,7 @@ ul, li {
 #personWorks {
   clear: both;
   margin-left: -180px;
-  margin-top: 220px;
+  margin-top: 20px;
 }
 
 #personWorkTypes {
@@ -225,14 +223,11 @@ span.externalLink {
   margin-bottom: 0;
 }
 
-/* Tab Content*/
-
 .tabContent {
-  position: absolute;
   margin-top: 20px;
   float: left;
   background-color: #ffffff;
-  width: 73%;
+  width: 100%;
 }
 
 .tabContent img {
@@ -240,12 +235,12 @@ span.externalLink {
 }
 
 .tabContentBibliographic {
-  margin-left: 15%;
+  padding-left: 17%;
   margin-top: -100px;
 }
 
 .tabContentButtons {
-  margin-left: 60%;
+  margin-left: 78%;
   margin-top: -90px;
 }
 
